FS011 backend add database configuration

--- a/FS011-Full Stack Movies/fullstack-backend/src/main/resources/application.properties
+++ b/FS011-Full Stack Movies/fullstack-backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=movies
+spring.data.mongodb.database=movies-api-db
+spring.data.mongodb.uri=mongodb+srv://biaobro:Wazg@20202020@cluster0.usk1gy0.mongodb.net
