--- a/FS011-Full Stack Movies/fullstack-backend/src/main/resources/application.properties
+++ b/FS011-Full Stack Movies/fullstack-backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=movies
-spring.data.mongodb.database=movies-api-db
-spring.data.mongodb.uri=mongodb+srv://biaobro:Wazg@20202020@cluster0.usk1gy0.mongodb.net
+spring.data.mongodb.database=${env.MONGO_DATABASE}
+spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@c${env.MONGO_CLUSTER}
