--- a/FS011-Full Stack Movies/fullstack-backend/src/main/resources/.env
+++ b/FS011-Full Stack Movies/fullstack-backend/src/main/resources/.env
@@ -1,4 +1,4 @@
-MONGO_DATABASE="movies-api-db"
+MONGO_DATABASE="movie-api-db"
 MONGO_USER="biaobro"
-MONGO_PASSWORD="Wazg@20202020"
+MONGO_PASSWORD="Wazg2020"
 MONGO_CLUSTER="cluster0.usk1gy0.mongodb.net"
