--- a/FS011-Full Stack Movies/fullstack-backend/src/main/resources/application.properties
+++ b/FS011-Full Stack Movies/fullstack-backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=movies
 spring.data.mongodb.database=${env.MONGO_DATABASE}
-spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@c${env.MONGO_CLUSTER}
+#spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@c${env.MONGO_CLUSTER}
+spring.data.mongodb.uri=mongodb://localhost:27017
